@@ -1,5 +1,12 @@
 2007-03-19  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/Makefile.am:
+	* data/Makefile.am:
+	* src/backend/Makefile.am: spaces cleanups by
+	Loïc Minier <lool+gnome@via.ecp.fr> (Closes: #414173)
+
+2007-03-19  Bastien Nocera  <hadess@hadess.net>
+
 	* configure.in: Fix build, remove the generation of
 	help/uk/Makefile
 
